refactor: spring-boot3 适配